--- a/client/content/styles/app.css
+++ b/client/content/styles/app.css
@@ -37,9 +37,95 @@ body {
     line-height: 1.2;
     border-radius: 3px;
   }
-.movable {
-  cursor:move;
+/*  animations */
+.animate-repeat.ng-enter { 
+    -webkit-animation: enter 600ms cubic-bezier(0.455, 0.030, 0.515, 0.955);
+    animation: enter 600ms cubic-bezier(0.455, 0.030, 0.515, 0.955);
+    display: block;
+    position: relative;
+} 
+@-webkit-keyframes enter {
+    from {
+        opacity: 0;
+        height: 0px;
+        right: -70px;
+    }
+    75% {
+        right: 15px;
+    }
+    to {
+        opacity: 1;
+        height: 30px;
+        right: 0px;
+    }
 }
-.over {
-  border:1px dashed #000;
+@keyframes enter {
+    from {
+        opacity: 0;
+        height: 0px;
+        right: -250px;
+    }
+    75% {
+        right: 30px;
+    }
+    to {
+        opacity: 1;
+        height: 30px;
+        right: 0px;
+    }
 }
+  
+.animate-repeat.ng-leave { 
+    -webkit-animation: leave 600ms cubic-bezier(0.455, 0.030, 0.515, 0.955);
+    animation: leave 600ms cubic-bezier(0.455, 0.030, 0.515, 0.955);
+    display: block;
+    position: relative;
+} 
+@-webkit-keyframes leave {
+    to {
+        opacity: 0;
+        height: 0px;
+        right: -70px;
+    }
+    25% {
+        right: 15px;
+    }
+    from {
+        opacity: 1;
+        height: 30px;
+        right: 0px;
+    }
+}
+@keyframes leave {
+    to {
+        opacity: 0;
+        height: 0px;
+        right: -70px;
+    }
+    25% {
+        right: 15px;
+    }
+    from {
+        opacity: 1;
+        height: 30px;
+        right: 0px;
+    }
+}
+
+.slide-right {
+  
+}
+/*
+.slide-right.ng-hide-add {
+    -webkit-animation: leave 600ms cubic-bezier(0.455, 0.030, 0.515, 0.955);
+    animation: leave 600ms cubic-bezier(0.455, 0.030, 0.515, 0.955);
+    display: block;
+    position: relative;
+}
+.slide-right.ng-hide-remove {
+    -webkit-animation: enter 600ms cubic-bezier(0.455, 0.030, 0.515, 0.955);
+    animation: enter 600ms cubic-bezier(0.455, 0.030, 0.515, 0.955);
+    display: block;
+    position: relative;
+}
+*/
