--- a/client/content/styles/app.css
+++ b/client/content/styles/app.css
@@ -113,19 +113,38 @@ body {
 }
 
 .slide-right {
-  
+  -webkit-transition: all .5s linear;
+  -moz-transition: all .5s linear;
+  -ms-transition: all .5s linear;
+  -o-transition: all .5s linear;
+  transition: all .5s linear;
 }
-/*
+
 .slide-right.ng-hide-add {
-    -webkit-animation: leave 600ms cubic-bezier(0.455, 0.030, 0.515, 0.955);
-    animation: leave 600ms cubic-bezier(0.455, 0.030, 0.515, 0.955);
-    display: block;
-    position: relative;
+  transform: translateX(0px);
+  -ms-transform: translateX(0px);
+  -webkit-transform: translateX(0px);
+  opacity:1;
 }
+
+.slide-right.ng-hide-add.ng-hide-add-active {
+  transform: translateX(-100px);
+  -ms-transform: translateX(-100px);
+  -webkit-transform: translateX(-100px);
+  opacity:0;
+}
+
 .slide-right.ng-hide-remove {
-    -webkit-animation: enter 600ms cubic-bezier(0.455, 0.030, 0.515, 0.955);
-    animation: enter 600ms cubic-bezier(0.455, 0.030, 0.515, 0.955);
-    display: block;
-    position: relative;
+  transform: translateX(-100px);
+  -ms-transform: translateX(-100px);
+  -webkit-transform: translateX(-100px);
+  display:block !important;
+  opacity:0;
 }
-*/
+
+.slide-right.ng-hide-remove.ng-hide-remove-active {
+  transform: translateX(0px);
+  -ms-transform: translateX(0px);
+  -webkit-transform: translateX(0px);
+  opacity:1;
+}
